fixed for CHLK-2857 Student Profile / Class Profile > use blue class icons

--- a/Chalkable.Web/assets/sass/partials/main/profile/class/_class_profile_info.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/class/_class_profile_info.scss
@@ -12,6 +12,7 @@ BODY {
                 .info{
                   margin: 39px 0 24px -10px;
                   font-size: 36px;
+                  vertical-align: top;
                 }
               }
 
