--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile.scss
@@ -174,8 +174,7 @@ BODY {
               overflow: hidden;
 
               IMG{
-                @include transition-property("all");
-                @include transition-duration("0.2s");
+                margin-top: -40px;
               }
             }
 
@@ -267,11 +266,11 @@ BODY {
 
               .class-icon-container{
                 margin-right: 10px;
-                height: 50px;
+                height: 40px;
                 IMG{
                   width: 45px;
                   position: relative;
-                  top: -50px;
+                  top: -39px;
                 }
               }
             }
