fixed for CHLK-2874

--- a/Chalkable.Web/assets/sass/partials/main/apps/_my_apps.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/_my_apps.scss
@@ -8,8 +8,12 @@ DIV.page {
 
 
             .toolbar-btn{
+
+              &.my-apps{
+                margin-right: 10px;
+              }
               &.app-store{
-                margin-left: 142px;
+                margin-left: 212px;
               }
 
               &.edit{
