--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
@@ -5,7 +5,7 @@ mixin AppMarketToolbar(balance, categories, gradelevels, isStore)
                 .user-balance= "$" + balance
             +ActionLink('appmarket', 'list')(class = isStore ? "pressed" : "").app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
-            +ActionLink('funds', 'view')(class = isStore ? "" : "pressed").toolbar-btn App Funds
+            //+ActionLink('funds', 'view')(class = isStore ? "" : "pressed").toolbar-btn App Funds
             +ActionForm('', '')
                 +SearchBox(chlk.services.AppMarketService, "getAppsByFilter",
                 chlk.templates.apps.AppMarketSearchBoxTpl)#app-market-searchbox.market-search-box(name="appMarketSearch", triggerBtnId="app-market-search-btn")
