--- a/Chalkable.Web/Views/Home/Index.cshtml
+++ b/Chalkable.Web/Views/Home/Index.cshtml
@@ -6,26 +6,11 @@
 @section MixPanelTracking {
     <script type="text/javascript">
         $(document).ready(function () {
-
-
             if (mixpanel) {
-                $("a > .demo-button , #floatingbuttons > a.demo-button").click(function () {
-                    mixpanel.track("Demo Button clicked");
+                mixpanel.track_links(".taglineMessage a", "Clicked demo from com", {
+                    "referrer": document.referrer
                 });
-
-                $("li.demoLI a").click(function () {
-                    mixpanel.track("Navbar Demo Button clicked");
-                });
-
-                $("a > .signup-button , #floatingbuttons > a.signup-button").click(function () {
-                    mixpanel.track("Signup Button clicked");
-                });
-
-                mixpanel.track_links("a > .demo-button", "Demo Button clicked", { 'referrer': document.referrer });
-                mixpanel.track_links("a > .signup-button", "Signup Button clicked", { 'referrer': document.referrer });
-                mixpanel.track_pageview("/User/LogOn");
-                mixpanel.track_pageview("/Home/Terms");
-                mixpanel.track_pageview("/User/Developers");
+                mixpanel.track_forms("#login-form", "Logged in from com");
             }
            
         });
