fixed CHLK-2882 Calendar class icons > should always be blue

--- a/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
+++ b/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
@@ -131,6 +131,17 @@ BODY {
 
         #main-wrapper {
           #main {
+
+            .month-page, .week-page{
+              .classes-bar{
+                .img-wrapper{
+                  IMG{
+                    margin-top: -40px;
+                  }
+                }
+              }
+            }
+
             DIV.chlk-calendar {
               border: none;
 
