fixed for CHLK-2560 All users > New Item View :: Show attached Standards

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -64,7 +64,7 @@ mixin AnnouncementTooltip()
                             .title Standards:
                             .standard-list
                                 each standard in self.getStandards()
-                                    .grey-button.same-on-hover
+                                    div(data-tooltip = standard.getDescription()).grey-button.same-on-hover
                                         span=standard.getName()
             if self.getUserRole().isStudent()
                 .silver-panel.attachments-panel
