--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementStandards.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementStandards.jade
@@ -1,5 +1,5 @@
 standards = self.getItemStandards() || []
     each standard in standards
-        .grey-button.same-on-hover
+        div(data-tooltip = standard.getDescription()).grey-button.same-on-hover
             span=standard.getName()
             +ActionLink('announcement', 'removeStandard', self.getAnnouncementId(), standard.getStandardId()).remove-standard
