--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -47,7 +47,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     .standards-list
                         standards = announcement.getStandards() || []
                         each standard in standards
-                            .grey-button.same-on-hover
+                            div(data-tooltip = standard.getDescription()).grey-button.same-on-hover
                                 span=standard.getName()
                                 if !disableDeleteBtn
                                     +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
