updated Index page

--- a/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
@@ -139,7 +139,7 @@
 				<span class="close"></span>
 			</header>
 
-			<form id="login-form" action="@Url.Content("~/User/LogOn")" method="post">
+			<form id="login-form" action="" method="post">
 				<p>
 					<label for="email">Email</label>
 					<input type="email" name="UserName" id="email" class="validate[required,custom[email]]">
