--- a/Chalkable.Web/assets/jade/activities/grading/WorksheetReport.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/WorksheetReport.jade
@@ -71,11 +71,11 @@
                     h3=Msg.Format
                     +Select('format').format
                         +Option(0, "PDF", true)
-                        +Option(1, "CSV", false)
-                        +Option(2, "Excel", false)
-                        +Option(3, "HTML", false)
-                        +Option(4, "TIFF", false)
-                        +Option(5, "XML (" + Msg.With_report_data + ")", false)
+                        +Option(1, "CSV", false)(disabled)
+                        +Option(2, "Excel", false)(disabled)
+                        +Option(3, "HTML", false)(disabled)
+                        +Option(4, "TIFF", false)(disabled)
+                        +Option(5, "XML (" + Msg.With_report_data + ")", false)(disabled)
         .report-bottom
             BUTTON(type="submit", name="submitType", value="submit").chlk-button.blue-gradient-btn=Msg.Download
             BUTTON(type="button").close.chlk-button.grey-button=Msg.Cancel
