--- a/Chalkable.Web/assets/jade/activities/grading/GradeBookReport.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradeBookReport.jade
@@ -1,6 +1,6 @@
 .dialog-window.report-window
     .close.close-btn.dark
-    date = new chlk.models.common.ChlkDate(getDate())
+    date = new chlk.models.common.ChlkDate()
     h1=Msg.Create_Report
     .report-buttons.panel-bg
         a(href="javascript:").report-button.pressed=Msg.Grade_Book_Report
