--- a/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
@@ -22,7 +22,7 @@ div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
             .letters 0 - #{self.getMaxScore()}
             .grading-input-popup.chlk-pop-up-container.popup-bottom
                 .pop-up-triangle.big
-                id = getDate().getTime()
+                id = self.getServerDate().getTime()
                 if self.isAbleDropStudentScore() || self.isDropped()
                     +LabeledCheckbox(Msg.Drop, 'dropped', self.isDropped())(data-value=self.isDropped(), id='dropped-' + id, class = self.isAbleDropStudentScore() ? '' : 'cant-drop').with-value.dropped-checkbox
                 else
