--- a/Chalkable.Web/assets/jade/activities/apps/app-info.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-info.jade
@@ -157,7 +157,7 @@ appPlatforms = appPlatforms.join(',')
                 label.hint Grading View:
                 .my-apps
                     .permission
-                        +MyAppsPermission("Will be Teachers", '', 'viewing student output', "short-gd")
+                        +MyAppsPermission("Will Teachers be", '', 'viewing student output', "short-gd")
                         +SlideCheckbox("showInGradingViewEnabled", myAppsAccess.isVisibleInGradingView(), self.isReadOnly())
         .section.small
             .elem.standarts
