--- a/Chalkable.Web/assets/jade/activities/apps/app-picture.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-picture.jade
@@ -24,6 +24,6 @@ mixin IconBox(pict)
             .bottom
                 div.simple-gray-button.file=title
                     +FileUpload('apps', 'uploadPicture', [dimsX, dimsY, title]).simple-gray-button
-                a(href=tplLink).download-link Download Template
+                a(href=tplLink).download-tpl-link Download Template
 
 +IconBox(self)
