--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -228,7 +228,7 @@ BODY {
                           }
                         }
 
-                        .download-link{
+                        .download-tpl-link{
                           display: inline-block;
                           margin-top: 9px;
                         }
