fixed for CHLK-2941 Teacher. Grades. Grid. During putting "Exemtp", will be strange behavior

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
@@ -40,6 +40,7 @@
                     .grading-selects
                         +ActionForm('grading', 'loadGradingPeriodGridSummary').load-grading-period
                             +Hidden('autoUpdate', false).auto-update
+                            +Hidden('avg', false).avg-value
                             +Hidden('classId', selectedId)
                             +Hidden('notCalculateGrid', false).not-calculate-grid
                             +Hidden('gradingPeriodId', gradingPeriod.getId().valueOf())
