--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -46,7 +46,7 @@ mixin StudentAverages(tpl)
                         ableDisplayAlphaGrades = self.isAbleDisplayAlphaGrades(),
                         gradingPeriodId = self.getGradingPeriod().getId()
                     )
-            .dotted-h.grade-value=tpl.getModel().displayGrade(studentAvg.getTotalAverage())
+            div(data-average-id=studentAvg.getAverageId()).dotted-h.total-average.grade-value=tpl.getModel().displayGrade(studentAvg.getTotalAverage())
 
 mixin DisplayTotalPoints(model)
     -studentTotalPoints = model.getStudentTotalPoints()
