--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -45,6 +45,7 @@
 @import "partials/main/sysadmin/_apps";
 @import "partials/main/popups/_popups";
 @import "partials/main/popups/_add_app";
+@import "partials/main/popups/_delete_app";
 @import "partials/main/popups/_add_school";
 @import "partials/main/popups/_add_district";
 @import "partials/main/popups/_add_department";
