--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -9,6 +9,6 @@
             +ActionLink('settings', 'dashboard').one-third-button.settings(title="View System Types") Settings
         .buttons-row
 
-            +ActionLink('funds', 'list').one-third-button.statistic(title="View Purchase Order") Purchase Order
+            +ActionLink('funds', 'list').one-third-button.statistic.purchase-order(title="View Purchase Order") Purchase Order
             +ActionLink('signup', 'list').one-third-button(title="View Signups") Signups
 #invite-button-container
