fixed for CHLK-2925 What to show if "No MAINTAIN permission"
CHLK-2985
Teacher. When teacher wants to edit an item, he won't see a picture

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -46,5 +46,5 @@ each item, i in items
     if item.getType() == chlk.models.announcement.ApplicationOrAttachmentEnum.APPLICATION
         +AnnouncementFormApplicationItem(item, i)
     else
-        if self.getUserRole().isTeacher() && (item.isOwner() || (!self.needButtons && item.isTeachersAttachment())) || self.getUserRole().isStudent() && !item.isOwner() || self.getUserRole().isAdmin()
+        if item.isTeachersAttachment()
             +AnnouncementFormAttachmentItem(item, i)
