--- a/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryPage.jade
@@ -63,7 +63,7 @@ mixin StudentsTpl(students, header, currentPage, date)
                         +ActionLink('attendance', 'showStudentAttendance', student.getId(),
                                 date, 'attendance', 'summary', JSON.stringify([true, self.getGradeLevelsIds(), currentPage, date])).img-container
                             +PersonImg(student, 128)
-                        +ActionLink('students', 'details', student.getId()).name=student.getDisplayName()
+                        +ProfileLink(student, 'student').name=student.getDisplayName()
                 if needButton
                     button.all-button=Msg.All
         div.hidden-students-block
@@ -78,7 +78,7 @@ mixin StudentsTpl(students, header, currentPage, date)
                         +ActionLink('attendance', 'showStudentAttendance', student.getId(),
                                 date, 'attendance', 'summary', JSON.stringify([true, self.getGradeLevelsIds(), currentPage, date])).img-container
                             +PersonImg(student, 128)
-                        +ActionLink('students', 'details', student.getId()).name=student.getDisplayName()
+                        +ProfileLink(student, 'student').name=student.getDisplayName()
 
 topData = self.getTopData()
 topItems = topData.getTopItems()
