--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -66,7 +66,7 @@ mixin SummaryInfo(presentCount, allStudentsCount)
                             if needPresent
                                 -item.setType(valuesEnum.PRESENT.valueOf());
                             student = item.getStudent();
-                            +ActionLink('students', 'details', student.getId()).left.image-container.white.shadow
+                            +ProfileLink(student, 'student').left.image-container.white.shadow
                                 +PersonImg(student, 47)
                             p.left
                                 SPAN.name=student.getFullName()
