--- a/Chalkable.Web/assets/jade/activities/discipline/admin-disciplines-summary.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/admin-disciplines-summary.jade
@@ -24,7 +24,7 @@ mixin StudentWithDiscipline(student, index)
         +ActionLink('discipline', 'showStudentDiscipline', student.getId(),
                 date, 'discipline', 'list', JSON.stringify([true, self.getGradeLevelsIds(), date])).img-container
             +PersonImg(student, 128)
-        +ActionLink('students', 'details', student.getId()).name=student.getDisplayName()
+        +ProfileLink(student, 'student').name=student.getDisplayName()
 
 mixin StudentsTpl(studentsBlock)
     students = studentsBlock.getStudents()
