--- a/Chalkable.Web/assets/jade/activities/settings/teacher-settings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/teacher-settings.jade
@@ -2,4 +2,4 @@
     .left
         +ActionLink('settings', 'generalTeacher').pressed General
     .right
-        +ActionLink('teachers', 'details', self.personId).profile-toolbar-button Profile
+        +ProfileLink(self, 'teacher', self.personId, true).profile-toolbar-button Profile
